WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143866
[SOUP] Redirect to non HTTP destination is broken
https://bugs.webkit.org/show_bug.cgi?id=143866
Summary
[SOUP] Redirect to non HTTP destination is broken
Carlos Garcia Campos
Reported
2015-04-17 01:51:35 PDT
This is because we are passing true unconditionally as isHTTPFamilyRequest parameter of createSoupRequestAndMessageForHandle in continueAfterWillSendRequest. I wrote a unit tests using a data URI to reproduce it: $ bin/TestWebKitAPI/WebKit2Gtk/TestLoaderClient -p /webkit2/WebKitWebPage/redirect-to-data-uri /webkit2/WebKitWebPage/redirect-to-data-uri: (WebKitWebProcess:19126): GLib-GObject-WARNING **: invalid cast from 'SoupRequestData' to 'SoupRequestHTTP' (WebKitWebProcess:19126): libsoup-CRITICAL **: soup_request_http_get_message: assertion 'SOUP_IS_REQUEST_HTTP (http)' failed ** ERROR:../../Tools/TestWebKitAPI/gtk/WebKit2Gtk/WebViewTest.cpp:292:void resourceGetDataCallback(GObject*, GAsyncResult*, gpointer): assertion failed: (data) Abortado
Attachments
Patch
(7.04 KB, patch)
2015-04-17 02:05 PDT
,
Carlos Garcia Campos
svillar
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-04-17 02:05:02 PDT
Created
attachment 251007
[details]
Patch
Sergio Villar Senin
Comment 2
2015-04-17 02:57:05 PDT
Comment on
attachment 251007
[details]
Patch Nice catch!
Carlos Garcia Campos
Comment 3
2015-04-17 03:15:02 PDT
Committed
r182943
: <
http://trac.webkit.org/changeset/182943
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug