Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestLoaderClient.cpp
@@ -425,6 +425,18 @@ static void testURIResponseHTTPHeaders(WebViewTest* test, gconstpointer)
     g_assert_cmpstr(soup_message_headers_get_one(headers, "Foo"), ==, "bar");
 }
 
+static void testRedirectToDataURI(WebViewTest* test, gconstpointer)
+{
+    test->loadURI(kServer->getURIForPath("/redirect-to-data").data());
+    test->waitUntilLoadFinished();
+
+    static const char* expectedData = "data-uri";
+    size_t mainResourceDataSize = 0;
+    const char* mainResourceData = test->mainResourceData(mainResourceDataSize);
+    g_assert_cmpint(mainResourceDataSize, ==, strlen(expectedData));
+    g_assert(!strncmp(mainResourceData, expectedData, mainResourceDataSize));
+}
+
 static void serverCallback(SoupServer* server, SoupMessage* message, const char* path, GHashTable*, SoupClientContext*, gpointer)
 {
     static const char* responseString = "<html><body>Testing!Testing!Testing!Testing!Testing!Testing!Testing!"
@@ -465,6 +477,9 @@ static void serverCallback(SoupServer* server, SoupMessage* message, const char*
     } else if (g_str_equal(path, "/headers")) {
         soup_message_headers_append(message->response_headers, "Foo", "bar");
         soup_message_body_append(message->response_body, SOUP_MEMORY_STATIC, responseString, strlen(responseString));
+    } else if (g_str_equal(path, "/redirect-to-data")) {
+        soup_message_set_status(message, SOUP_STATUS_MOVED_PERMANENTLY);
+        soup_message_headers_append(message->response_headers, "Location", "data:text/plain;charset=utf-8,data-uri");
     } else
         soup_message_set_status(message, SOUP_STATUS_NOT_FOUND);
 
@@ -502,6 +517,7 @@ void beforeAll()
     WebPageURITest::add("WebKitWebPage", "get-uri", testWebPageURI);
     WebViewTest::add("WebKitURIRequest", "http-headers", testURIRequestHTTPHeaders);
     WebViewTest::add("WebKitURIResponse", "http-headers", testURIResponseHTTPHeaders);
+    WebViewTest::add("WebKitWebPage", "redirect-to-data-uri", testRedirectToDataURI);
 }
 
 void afterAll()
